objects/User.object
<CustomObject>
    <fields>
        <fullName>ADID__c</fullName>
        <description>SFDC1-199 Unique ID for the employee used also for Single Sign On</description>
        <inlineHelpText>Unique Id for the employee generated by HR</inlineHelpText>
        <label>AD ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AdClaimsApprover__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-1059 This field should be checked for a user who is authorized to approve an Ad Claim records.</description>
        <inlineHelpText>Please check this field if current user is authorized to approve Ad Claim records.</inlineHelpText>
        <label>Ad Claims Approver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AssociatedTo__c</fullName>
        <description>SFDC-5551: Creating Associated To values to categorize the records &amp; data can be used for reporting</description>
        <label>Associated To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>AssociatedTo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DUCApprover__c</fullName>
        <defaultValue>false</defaultValue>
        <description>POLK WRF checkbox for POLK data on User for Approvers.</description>
        <label>DUC Approver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>SFDC1-7841 This field holds insight about the user and why the user was created</description>
        <inlineHelpText>Please enter contextual notes about the user and why the user was created</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EmployeeNumber__c</fullName>
        <description>SFDC1-8976 : As standard &apos;Employee Number&apos; Field can not be marked as External Id, creating new custom field for the same.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Workday ID of any IHS Markit Employees, consultants and channel partners. This field is used to synch HR data with the quota database and workday system to Salesforce.</inlineHelpText>
        <label>Employee Number</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EnrolledINSalesProgram__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-199 Field to determine is user is part of Sales High Touch program</description>
        <inlineHelpText>This field designates users from legacy IHS that were enrolled as part of the High Touch program at migration. It is currently being used for only historical purposes</inlineHelpText>
        <label>Enrolled in Sales High Touch Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <description>Temporarily external Id for migration of Markit System</description>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FormalFirstName__c</fullName>
        <description>SFDC1-199 Name user likes to go by – ie Mike vs   Michael</description>
        <inlineHelpText>Enter the name users go by e.g Mike vs Michael</inlineHelpText>
        <label>Formal First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FullName__c</fullName>
        <description>SFDC-1156 - This field will show the full name of User.</description>
        <formula>FirstName &amp; &quot; &quot; &amp; LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GlobalVertical__c</fullName>
        <label>Global Vertical</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consolidated Markets &amp; Solutions</fullName>
                </value>
                <value>
                    <fullName>Financial Markets</fullName>
                </value>
                <value>
                    <fullName>Financial Services: Financial Markets</fullName>
                </value>
                <value>
                    <fullName>Financial Services: Financial Market Technologies</fullName>
                </value>
                <value>
                    <fullName>Resources</fullName>
                </value>
                <value>
                    <fullName>Transportation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Above All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HRActiveStatus__c</fullName>
        <description>SFDC1-906; It helps to identify them and turn off the user access in sfdc</description>
        <inlineHelpText>ACTIVE (Active Colleague)
INACTIVE (On Leave)
RETIREE (Retired)
WITHDRWN (Terminated)</inlineHelpText>
        <label>HR Active Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACTIVE(ActiveColleague)</fullName>
                    <label>ACTIVE (Active Colleague)</label>
                </value>
                <value>
                    <fullName>INACTIVE(OnLeave)</fullName>
                    <label>INACTIVE (On Leave)</label>
                </value>
                <value>
                    <fullName>RETIREE(Retired)</fullName>
                    <label>RETIREE (Retired)</label>
                </value>
                <value>
                    <fullName>WITHDRWN(Terminated)</fullName>
                    <label>WITHDRWN (Terminated)</label>
                </value>
                <value>
                    <fullName>ACTIVE</fullName>
                    <isActive>false</isActive>
                    <label>ACTIVE</label>
                </value>
                <value>
                    <fullName>INACTIVE</fullName>
                    <isActive>false</isActive>
                    <label>INACTIVE</label>
                </value>
                <value>
                    <fullName>RETIREE</fullName>
                    <isActive>false</isActive>
                    <label>RETIREE</label>
                </value>
                <value>
                    <fullName>WITHDRAWN</fullName>
                    <isActive>false</isActive>
                    <label>WITHDRAWN</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HRBusinessLine__c</fullName>
        <description>This is the Business Line field created  per SFDC1-638.</description>
        <inlineHelpText>Populate HR Business Line details</inlineHelpText>
        <label>HR Business Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRCostCenter__c</fullName>
        <description>SFDC1-199 Cost Center as defined by HR Cost Center</description>
        <inlineHelpText>To be provided by HR</inlineHelpText>
        <label>HR Cost Center</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRFunction__c</fullName>
        <description>SFDC1-199 Function as defined by HR file</description>
        <inlineHelpText>To be provided by HR</inlineHelpText>
        <label>HR Function</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRJobTitle__c</fullName>
        <description>SFDC1-199 Title as defined by HR file</description>
        <inlineHelpText>To be provided by HR</inlineHelpText>
        <label>HR Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRManagerID__c</fullName>
        <description>SFDC1-199 HR managers AD ID as defined in the HR file</description>
        <inlineHelpText>To be provided by HR</inlineHelpText>
        <label>HR Manager ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRManager__c</fullName>
        <description>SFDC1-199 HR managers full name as defined in the HR file</description>
        <inlineHelpText>Managers full name to be provided by HR</inlineHelpText>
        <label>HR Manager</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRSubBusinessLine__c</fullName>
        <description>The field is created for SPGI Day1 project SFDC-4829</description>
        <label>HR Sub Business Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyCRM__c</fullName>
        <description>SFDC-907. Request by Anne Thomas to log the legacy CRM the user originates from.</description>
        <inlineHelpText>Displays the legacy system the User was on prior to migration to IHS Markit&apos;s Salesforce.</inlineHelpText>
        <label>Legacy CRM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Clientele</fullName>
                </value>
                <value>
                    <fullName>IHS</fullName>
                </value>
                <value>
                    <fullName>IHS Markit</fullName>
                </value>
                <value>
                    <fullName>Ipreo-GMG Corp</fullName>
                </value>
                <value>
                    <fullName>Ipreo-PCM</fullName>
                </value>
                <value>
                    <fullName>Markit</fullName>
                </value>
                <value>
                    <fullName>Polk</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LegacyIDUnique__c</fullName>
        <externalId>true</externalId>
        <label>LegacyIDUnique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>SFDC1-2445 : Legacy ID field for User Object</description>
        <externalId>true</externalId>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LegacySystem__c</fullName>
        <label>LegacySystem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LegacySystem</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LegalEntity__c</fullName>
        <description>SFDC1-5853 : This field will hold the value of Legal Entity of the user and will be editable only by System Admin and  Sales Ops</description>
        <inlineHelpText>Legal Entity of the user</inlineHelpText>
        <label>Legal Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__LOOPlus_Tester__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this box will allow this user to run Document Packages on the Drawloop next-release environment when it is available for testing.</inlineHelpText>
        <label>DocGen Next Release Test User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__dsPassword__c</fullName>
        <label>DocuSign Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__dsToken__c</fullName>
        <label>DocuSign API UserName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Me__c</fullName>
        <description>SFDC-2645 Reporting fields for Hierarchy on the User record</description>
        <formula>$User.Id = Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checked for current user</inlineHelpText>
        <label>Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MyTeam__c</fullName>
        <description>SFDC-2645 Reporting fields for Hierarchy on the User record</description>
        <formula>OR(
$User.Id = Id,
$User.Id = ManagerId,
$User.Id = Manager.Manager.Id, 
$User.Id = Manager.Manager.Manager.Id,
$User.Id = Manager.Manager.Manager.Manager.Id,
$User.Id = Manager.Manager.Manager.Manager.Manager.Id,
$User.Id = Manager.Manager.Manager.Manager.Manager.Manager.Id,
$User.Id = Manager.Manager.Manager.Manager.Manager.Manager.Manager.Id,
$User.Id = Manager.Manager.Manager.Manager.Manager.Manager.Manager.Manager.Id,
$User.Id = Manager.Manager.Manager.Manager.Manager.Manager.Manager.Manager.Manager.Id,
$User.Id = Manager.Manager.Manager.Manager.Manager.Manager.Manager.Manager.Manager.Manager.Id
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>To only pull their team member info</inlineHelpText>
        <label>MyTeam</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PKIDUser__c</fullName>
        <description>SFDC1-2445 : Creating PK field for Data Migration Support</description>
        <displayFormat>Usr{000000}</displayFormat>
        <externalId>true</externalId>
        <label>PKID User</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>PartnerAccountId__c</fullName>
        <description>Used by Partner Community users to reference their Partner Account Id

This field is being used in Community related changes</description>
        <formula>IF(ISPICKVAL(UserType,&quot;PowerPartner&quot;),
    CASESAFEID(Contact.AccountId),
    null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuotaManager__c</fullName>
        <description>SFDC1-199 Lookup to manager populated by QDB integration.</description>
        <inlineHelpText>Automatically populated through system integration</inlineHelpText>
        <label>Quota Manager</label>
        <relationshipName>QuotaManagers</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>RenewalIntegration__c</fullName>
        <description>SFDC-2248 to note if a User has Renewal auto populated by the Renewal Integration</description>
        <inlineHelpText>Yes, if an Automotive user needs their renewals created via renewal integration</inlineHelpText>
        <label>Renewal Integration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SalesBusinessLine__c</fullName>
        <description>SFDC1-5516: To define the Sales Business Line for a user</description>
        <label>Sales Business Line</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AD&amp;S (Aerospace, Defense and Security)</fullName>
                </value>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Corporate Actions</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>ECR</fullName>
                </value>
                <value>
                    <fullName>EDM/Vista</fullName>
                </value>
                <value>
                    <fullName>Equities</fullName>
                </value>
                <value>
                    <fullName>ERC/PMI (Economic Country Risk)</fullName>
                </value>
                <value>
                    <fullName>Indices</fullName>
                </value>
                <value>
                    <fullName>M&amp;T (Maritime and Trade)</fullName>
                </value>
                <value>
                    <fullName>OMDC (Oil, Midstream, Downstream, Chemicals)</fullName>
                </value>
                <value>
                    <fullName>OMS</fullName>
                </value>
                <value>
                    <fullName>OPIS</fullName>
                </value>
                <value>
                    <fullName>PD (Product Design)</fullName>
                </value>
                <value>
                    <fullName>PGCR (Power, Gas, Coal and Renewables)</fullName>
                </value>
                <value>
                    <fullName>Processing &amp; Platforms</fullName>
                </value>
                <value>
                    <fullName>PVR</fullName>
                </value>
                <value>
                    <fullName>Risk &amp; Compliance</fullName>
                </value>
                <value>
                    <fullName>TMT (Technology Media Telecom)</fullName>
                </value>
                <value>
                    <fullName>Upstream</fullName>
                </value>
                <value>
                    <fullName>WSO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SalesBusinessLineglobalpicklist__c</fullName>
        <description>SFDC1-5516 This field is to define the Sales Business Line for a user</description>
        <label>Sales Business Line</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SalesBusinessLine</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SalesManager__c</fullName>
        <description>SFDC-2645 Reporting fields for Hierarchy on the User record</description>
        <formula>IF(NOT(ISBLANK(Manager.Manager.Manager.Manager.Manager.Manager.Manager.Manager.ManagerId)),Manager.Manager.Manager.Manager.Manager.Manager.Manager.Manager.Manager.FullName__c &amp; &quot;, &quot; &amp; Manager.Manager.Manager.Manager.Manager.Manager.Manager.Manager.FullName__c &amp; &quot;, &quot; &amp;Manager.Manager.Manager.Manager.Manager.Manager.Manager.FullName__c &amp; &quot;, &quot; &amp;Manager.Manager.Manager.Manager.Manager.Manager.FullName__c &amp; &quot;, &quot; &amp;Manager.Manager.Manager.Manager.Manager.FullName__c &amp; &quot;, &quot; &amp;Manager.Manager.Manager.Manager.FullName__c &amp; &quot;, &quot; &amp;Manager.Manager.Manager.FullName__c &amp; &quot;, &quot; &amp;Manager.Manager.FullName__c &amp; &quot;, &quot; &amp;Manager.FullName__c &amp; &quot;, &quot; &amp;FullName__c, IF(NOT(ISBLANK(Manager.Manager.Manager.Manager.Manager.Manager.Manager.ManagerId)),Manager.Manager.Manager.Manager.Manager.Manager.Manager.Manager.FullName__c &amp; &quot;, &quot; &amp;Manager.Manager.Manager.Manager.Manager.Manager.Manager.FullName__c &amp; &quot;, &quot; &amp;Manager.Manager.Manager.Manager.Manager.Manager.FullName__c &amp; &quot;, &quot; &amp;Manager.Manager.Manager.Manager.Manager.FullName__c &amp; &quot;, &quot; &amp;Manager.Manager.Manager.Manager.FullName__c &amp; &quot;, &quot; &amp;Manager.Manager.Manager.FullName__c &amp; &quot;, &quot; &amp;Manager.Manager.FullName__c &amp; &quot;, &quot; &amp;Manager.FullName__c &amp; &quot;, &quot; &amp;FullName__c,IF(NOT(ISBLANK(Manager.Manager.Manager.Manager.Manager.Manager.ManagerId)),Manager.Manager.Manager.Manager.Manager.Manager.Manager.FullName__c &amp; &quot;, &quot; &amp;Manager.Manager.Manager.Manager.Manager.Manager.FullName__c &amp; &quot;, &quot; &amp;Manager.Manager.Manager.Manager.Manager.FullName__c &amp; &quot;, &quot; &amp;Manager.Manager.Manager.Manager.FullName__c &amp; &quot;, &quot; &amp;Manager.Manager.Manager.FullName__c &amp; &quot;, &quot; &amp;Manager.Manager.FullName__c &amp; &quot;, &quot; &amp;Manager.FullName__c &amp; &quot;, &quot; &amp;FullName__c,IF(NOT(ISBLANK(Manager.Manager.Manager.Manager.Manager.ManagerId)),Manager.Manager.Manager.Manager.Manager.Manager.FullName__c &amp; &quot;, &quot; &amp;Manager.Manager.Manager.Manager.Manager.FullName__c &amp; &quot;, &quot; &amp;Manager.Manager.Manager.Manager.FullName__c &amp; &quot;, &quot; &amp;Manager.Manager.Manager.FullName__c &amp; &quot;, &quot; &amp;Manager.Manager.FullName__c &amp; &quot;, &quot; &amp;Manager.FullName__c &amp; &quot;, &quot; &amp;FullName__c,IF(NOT(ISBLANK(Manager.Manager.Manager.Manager.ManagerId)),Manager.Manager.Manager.Manager.Manager.FullName__c &amp; &quot;, &quot; &amp; Manager.Manager.Manager.Manager.FullName__c &amp; &quot;, &quot; &amp;Manager.Manager.Manager.FullName__c &amp; &quot;, &quot; &amp;Manager.Manager.FullName__c &amp; &quot;, &quot; &amp;Manager.FullName__c &amp; &quot;, &quot; &amp;FullName__c,IF(NOT(ISBLANK(Manager.Manager.Manager.ManagerId)),Manager.Manager.Manager.Manager.FullName__c &amp; &quot;, &quot; &amp;Manager.Manager.Manager.FullName__c &amp; &quot;, &quot; &amp;Manager.Manager.FullName__c &amp; &quot;, &quot; &amp;Manager.FullName__c &amp; &quot;, &quot; &amp;FullName__c,IF(NOT(ISBLANK(Manager.Manager.ManagerId)),Manager.Manager.Manager.FullName__c &amp; &quot;, &quot; &amp;Manager.Manager.FullName__c &amp; &quot;, &quot; &amp;Manager.FullName__c &amp; &quot;, &quot; &amp;FullName__c,IF(NOT(ISBLANK(Manager.ManagerId)),Manager.Manager.FullName__c &amp; &quot;, &quot; &amp;Manager.FullName__c &amp; &quot;, &quot; &amp;FullName__c,IF(NOT(ISBLANK(ManagerId)),Manager.FullName__c &amp; &quot;, &quot; &amp; FullName__c,FullName__c
)))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Show manager hierarchy upto 10 levels</inlineHelpText>
        <label>Sales Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubDivision__c</fullName>
        <description>SFDC-5593- Add a text field in the User object and name it &quot;Sub-Division&quot;</description>
        <label>Sub-Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserHRType__c</fullName>
        <description>SFDC1-199 Defines if the user is a dealer, contractor, employee or others as defined by HR systems</description>
        <inlineHelpText>To be provided by HR</inlineHelpText>
        <label>User HR Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserRegion__c</fullName>
        <description>SFDC1-199 Interpret from address based on country</description>
        <inlineHelpText>Interpret from address based on country</inlineHelpText>
        <label>User Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dsfs__DSProSFMembershipStatus__c</fullName>
        <label>DSProSFMembershipStatus</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__DSProSFPassword__c</fullName>
        <label>DSProSFPassword</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__DSProSFUsername__c</fullName>
        <description>DocuSign username</description>
        <label>DSProSFUsername</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ActiveCustomerCommunityUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>SALES.CONTACT.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.USERTYPE</field>
            <operation>equals</operation>
            <value>b</value>
        </filters>
        <label>Active Customer Community Users</label>
    </listViews>
    <listViews>
        <fullName>ActivePartnerCommunityUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>SALES.CONTACT.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.USERTYPE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>Active Partner Community Users</label>
    </listViews>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>ActiveUsersHR</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CREATED_BY_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>HRBusinessLine__c</columns>
        <columns>HRCostCenter__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HRActiveStatus__c</field>
            <operation>equals</operation>
            <value>ACTIVE(ActiveColleague),INACTIVE(OnLeave)</value>
        </filters>
        <label>Active User HR</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FULL_NAME</field>
            <operation>contains</operation>
            <value>Rahul</value>
        </filters>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>DocusignActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Docusign Active Users</label>
    </listViews>
    <listViews>
        <fullName>DrawloopUsers</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 OR 6 OR 7 OR 8 OR 9</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>contains</operation>
            <value>eagza,sackr,kande,panto,daust,bbaks,dbanw,abars,AnnaBele,SBill,jblak,kblas,tbook</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>contains</operation>
            <value>jbrys,dbuel,tburn,dcamp,rcroa,adeak,cdege,ddel,fdos,rearl,jelki,deste,tevan,ageu</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>contains</operation>
            <value>tgill,dglov,jgoun,mgow,mhand,bhane,jharr,ehasu,chend,fhoos,mhube,jhull,jvavl,fhu</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>contains</operation>
            <value>ainne,SJohn,BJone,ekaku,hkane,dkaru,skash,vkent,tklot,bkoba,RKolp,tkova,nkuma</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>contains</operation>
            <value>jlamb2,llasf,hlau,vlaur,nlee,rlee,jlewi,dmaca,emald,HMcCl,amile,jmine,FMinhas</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>contains</operation>
            <value>bmoff,tmoor,amuha,kmulr,mnewm,bo&apos;co,kpari,cpashm,spemb,jpenn,rpetr,cphan,apren</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>contains</operation>
            <value>jquin,srani,jrega,mreil,rrenn,troac,arusi,osali,csalu,csand,jsant,ssris,jsavi</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>contains</operation>
            <value>dseow,santoshs,psmit,csout,Kerryann,gstow,csund,sswad,ytaka,stake,erict,ttam,pta</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>contains</operation>
            <value>jthei,btill,pturn,evass,kvon,cwhee,swu,nyegu,azelt,bzhou,czoog</value>
        </filters>
        <label>Drawloop Users</label>
    </listViews>
    <listViews>
        <fullName>dsfs__DocuSignActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>notEqual</operation>
            <value>null</value>
        </filters>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>DocuSign Active Users</label>
    </listViews>
    <listViews>
        <fullName>dsfs__DocuSignInactiveUsers</fullName>
        <booleanFilter>(1 or 2) and 3</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>equals</operation>
            <value>null</value>
        </filters>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>DocuSign Inactive Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>ADIdRequired</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( ADID__c )</errorConditionFormula>
        <errorDisplayField>ADID__c</errorDisplayField>
        <errorMessage>Please enter AD Id</errorMessage>
    </validationRules>
</CustomObject>